# Ray-Tracer

./: README.md
rt-proj-00/: .gitignore  README.md  a  a.cpp  a.out  background.cpp  background.h  common.h  corners_colors.in  do  gen_img.cpp  sandbox.cpp
rt-proj-01/: README.md
rt-proj-01/scene/: scene_02.xml  scene_03.xml
rt-proj-02/: README.md  sandbox
rt-proj-02/pics/: main.tex  pixel_grid.aux  pixel_grid.tex
rt-proj-02/scene/: scene_02.xml
rt-proj-03/: CMakeLists.txt  README.md  basic_rt3  roda.txt  sandbox.cpp
rt-proj-03/scene/: proj4_normal_ortho.xml  proj4_normal_pers.xml  proj4_orthog.xml  proj4_pers.xml  scene_03.xml
rt-proj-04/: README.md
rt-proj-04/scene/: ortho_balls.xml  pers_balls.xml  (+5 more)
rt-proj-05/: .gitignore  CMakeLists.txt  README.md  build_src  roda.txt
rt-proj-05/scene/lights_scene/: bphong_scene_main.xml  geometry_directional.xml  geometry_point.xml  geometry_spot.xml  spheres.xml
rt-proj-05/src/cameras/: orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
rt-proj-05/src/core/: api.cpp  api.h  camera.cpp  color.cpp  color.h  film.cpp  film.h  integrator.h  light.cpp  light.h  parser.cpp  primitive.cpp  primitive.h  ray.h  rt3.h  scene.cpp  scene.h  shape.h  surfel.h
rt-proj-05/src/integrators/: flat.h  ping_pong.cpp  ping_pong.h
rt-proj-05/src/lights/: directional.cpp  directional.h  hit.h  point.cpp  point.h  spot.cpp  spot.h
rt-proj-05/src/materials/: flat.cpp  ping_pong.cpp  ping_pong.h
rt-proj-05/src/shapes/: sphere.cpp  sphere.h
rt-supporting-code/: CMakeLists.txt  sandbox.cpp  simple_bkg.ppm
(+72 files in other folders)
